feat: 1~45이외의 숫자를 입력한 경우 예외 처리